src/tests/snapshots/swayward__tests__window_opening__check_target_output_and_workspace@ws2-out1-fsF-wfsBN-spA1.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nset parent: A1\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-2\"\n    open-on-output \"headless-1\"\n    open-fullscreen false\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-1\"\n}"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1900 × 1060, bounds: 1900 × 1060, states: []

post-map configures:
size: 1 × 1, bounds: 1900 × 1060, states: []
